@@ -1,6 +1,7 @@
 v1.5.3 (WIP)
 - Document how to prevent screen artifacts when using SetBackgroundTransparent
 - Fix incorrect TabbedPanels colors
+- Preserve order of panels when updating panel
 
 v1.5.2 (2020-12-04)
 - Handle input events before executing queued update functions
